--- a/public/style/style.css
+++ b/public/style/style.css
@@ -18,8 +18,6 @@
     letter-spacing: 14px;
 font-family: 'Lato', sans-serif;
 margin: 0px;
-margin-left: 25px;
-margin-bottom: 10px;
 }
 a{
   color: black;
@@ -48,13 +46,10 @@ a{
   color: black;
 }
 div {
-  margin: auto;
-  min-width: 500px;
-  text-align: center;
-  height: 600px;
-  overflow: auto;
-  max-width: 1100px;
-  margin-top: 8%;
+     min-width: 100%;
+     text-align: center;
+     height: 100%;
+     max-width: 1100px;
 }
 div table {
   width: 100%;
