--- a/public/style/stats.css
+++ b/public/style/stats.css
@@ -19,18 +19,47 @@
 font-family: 'Lato', sans-serif;
 margin: 0px;
 }
-.golDiv{
-  width: 61%;
-  display: inline-block;
-  position: absolute;
-  text-align: center;
-  left: 47%;
-
-}
-.div{
-  display:none;
-}
-.golDiv a{
-  text-decoration: none;
+a{
   color: black;
+  text-decoration: none;
+}
+.Grass {
+  background-color: #4ebc0f;
+  color: #fff;
+}
+.GrassEater {
+  background-color: yellow;
+}
+.Predator {
+  background-color: #ad2929;
+  color: #fff;
+}
+.Devil {
+  background-color: black;
+  color: #fff;
+}
+.Grass:hover,
+.GrassEater:hover,
+.Predator:hover,
+.Devil:hover {
+  background-color: #ccc;
+  color: black;
+}
+div {
+     min-width: 100%;
+     text-align: center;
+     height: 100%;
+     max-width: 1100px;
+}
+div table {
+  width: 100%;
+  text-align: center;
+}
+div table th {
+  padding: 17px;
+  background-color: #ccc;
+}
+div table tr td {
+  padding: 14px;
+  transition: 0.3s;
 }
